[package]
name = "redstonesim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Python 拡張モジュールとしてビルド

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
pyo3        = { version = "0.22", features = ["extension-module"] }

[build-dependencies]
maturin    = "1.9.1"
